Countly pod updated to 20.11.1 for iOS and some small fixes.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
         <!-- <button onclick="app.sendRating()" class="fluid ui button">Send 5 star rating!!</button> -->
         <button onclick="app.askForStarRating()" class="fluid ui button orange">Open rating modal</button>
         <button onclick="app.askForFeedback()" class="fluid ui button orange">Open feedback modal</button>
+        <button onclick="app.showSurvey()" class="fluid ui button orange">Show Survey</button>
+        <button onclick="app.showNPS()" class="fluid ui button orange">Show NPS</button>
         <div class="ui horizontal divider">Rating Methods End</div>
 
         <div class="ui horizontal divider">Performance Methods Start</div>
@@ -168,7 +170,7 @@
                 Countly.setLoggingEnabled(true); // Enable countly internal debugging logs
                 Countly.enableCrashReporting(); // Enable crash reporting to report unhandled crashes to Countly
                 Countly.setRequiresConsent(true); // Set that consent should be required for features to work.
-                Countly.giveConsentInit(["location", "sessions", "attribution", "push", "events", "views", "crashes", "users", "push", "star-rating", "apm"]); // give conset for specific features before init.
+                Countly.giveConsentInit(["location", "sessions", "attribution", "push", "events", "views", "crashes", "users", "push", "star-rating", "apm", "feedback", "remote-config"]); // give conset for specific features before init.
                 Countly.setLocationInit("TR", "Istanbul", "41.0082,28.9784", "10.2.33.12"); // Set user initial location.
 
 
@@ -183,6 +185,7 @@
                 }, function(r){
                     console.log("[CountlyCordova] onError : " + r);
                 }); // Set Automatic value download happens when the SDK is initiated or when the device ID is changed.
+                Countly.pushTokenType(Countly.messagingMode.TEST); // Set messaging mode for push notifications
                 
                 Countly.init("https://try.count.ly", "YOUR_API_KEY").then((result) => {
                 Countly.setStarRatingDialogTexts("Title", "Message", "Dismiss");
@@ -190,7 +193,6 @@
                      * Push notifications settings 
                      * Should be call after init
                     */
-                    Countly.pushTokenType(Countly.messagingMode.TEST); // Set messaging mode for push notifications
                     Countly.onNotification(function(theNotification){
                         console.log("[CountlyCordova] onNotification : " + JSON.stringify(theNotification));
                     }); // Set callback to receive push notifications
@@ -517,6 +519,28 @@
             console.log("[CountlyCordova] askForStarRating : " + ratingResult);
         });
     }
+
+    app.showSurvey = function(){
+        Countly.getAvailableFeedbackWidgets().then((retrivedWidgets) => {
+            if("survey" in retrivedWidgets) {
+                Countly.presentFeedbackWidget("survey", retrivedWidgets.survey, "Close")
+            }
+        },(err) => {
+            console.error("[CountlyCordova] getAvailableFeedbackWidgets error : " +err);
+        });
+    }
+
+    app.showNPS = function(){
+        Countly.getAvailableFeedbackWidgets().then((retrivedWidgets) => {
+            if("nps" in retrivedWidgets) {
+                Countly.presentFeedbackWidget("nps", retrivedWidgets.survey, "Cancel")
+            }
+        },(err) => {
+            console.error("[CountlyCordova] getAvailableFeedbackWidgets error : " +err);
+        });
+    }
+
+    
 
     app.addCrashLog = function() {
         Countly.enableCrashReporting();
